[package]
name = "fast_quic"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.6.1"
tokio = { version = "0.2", features = [ "full" ] }
observability = "0.1"
futures = "0.3.12"
url2 = "0.0.6"
rcgen = "0.8.9"

[dev-dependencies]
criterion = "0.3.4"
once_cell = "1.5.2"

[[bench]]
name = "bench"
harness = false
